# max_memory

./: 404.html  README.md  basic.html  basic2.html  basic3.html  index.html  main.py  main_2_digraph.html  main_2_graph.html  main_degraph.html  main_degraph.pickle  main_graph.html  main_graph.pickle  main_graph2.pickle  mkdocs.yml  pyproject.toml
src/: basic.html  my_graph.pickle  save.pickle
src/max_memory/: core.py  demo.py  embedding.py  graphs.py  indexs.py  main.py  memory.py  prompt.py  server.py  utils.py
src/max_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
