[project]
name = "max-memory"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "fastapi>=0.116.1", "llama-index>=0.13.0", "llama-index-vector-stores-qdrant>=0.7.1", "llmada>=1.0.3", "pyvis>=0.3.2", "qdrant-client>=1.15.1", "toml==0.10.2", "uvicorn>=0.35.0", "volcengine-python-sdk>=4.0.10",]

[tool.setuptools.package-data]
max_memory = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
